# game-events

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  rabbit_listener.py  send.py  tasks.py
utils/: logging_config.py  rabbit_connection.py
